--- a/package.json
+++ b/package.json
@@ -59,24 +59,41 @@
     "@adonisjs/drive": "^3.4.1",
     "@adonisjs/inertia": "^3.1.1",
     "@adonisjs/lucid": "^21.6.1",
+    "@adonisjs/mail": "^9.2.2",
     "@adonisjs/session": "^7.5.1",
     "@adonisjs/shield": "^8.2.0",
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^4.0.0",
+    "@ark-ui/vue": "^5.31.0",
+    "@aws-sdk/client-s3": "^3.984.0",
+    "@aws-sdk/client-ses": "^3.984.0",
+    "@aws-sdk/s3-request-presigner": "^3.984.0",
     "@inertiajs/vue3": "^2.3.11",
     "@milkdown/crepe": "^7.18.0",
     "@milkdown/kit": "^7.18.0",
     "@milkdown/vue": "^7.18.0",
     "@prosemirror-adapter/vue": "^0.4.6",
+    "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.18",
+    "@tiptap/extension-image": "^3.19.0",
+    "@tiptap/extension-link": "^3.19.0",
+    "@tiptap/extensions": "^3.19.0",
+    "@tiptap/pm": "^3.19.0",
+    "@tiptap/starter-kit": "^3.19.0",
+    "@tiptap/vue-3": "^3.19.0",
     "@vinejs/vine": "^3.0.1",
     "@vue/server-renderer": "^3.5.27",
     "edge.js": "^6.2.1",
+    "gsap": "^3.14.2",
     "install": "^0.13.0",
+    "lucide-vue-next": "^0.563.0",
     "luxon": "^3.7.2",
+    "motion-v": "^1.10.2",
     "pg": "^8.17.2",
     "reflect-metadata": "^0.2.2",
+    "remark-directive": "^4.0.0",
     "tailwindcss": "^4.1.18",
+    "tailwindcss-typography": "^3.1.0",
     "vue": "^3.5.27"
   },
   "hotHook": {
