--- a/package.json
+++ b/package.json
@@ -75,19 +75,26 @@
     "@prosemirror-adapter/vue": "^0.4.6",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.18",
+    "@tiptap/extension-document": "^3.19.0",
     "@tiptap/extension-image": "^3.19.0",
     "@tiptap/extension-link": "^3.19.0",
+    "@tiptap/extension-paragraph": "^3.19.0",
+    "@tiptap/extension-text": "^3.19.0",
     "@tiptap/extensions": "^3.19.0",
     "@tiptap/pm": "^3.19.0",
     "@tiptap/starter-kit": "^3.19.0",
     "@tiptap/vue-3": "^3.19.0",
     "@vinejs/vine": "^3.0.1",
+    "@vue-email/components": "^0.0.21",
+    "@vue-email/render": "^0.0.9",
     "@vue/server-renderer": "^3.5.27",
+    "@vueuse/core": "^14.2.0",
     "edge.js": "^6.2.1",
     "gsap": "^3.14.2",
     "install": "^0.13.0",
     "lucide-vue-next": "^0.563.0",
     "luxon": "^3.7.2",
+    "mjml": "^4.18.0",
     "motion-v": "^1.10.2",
     "pg": "^8.17.2",
     "reflect-metadata": "^0.2.2",
