--- a/package.json
+++ b/package.json
@@ -96,9 +96,11 @@
     "luxon": "^3.7.2",
     "mjml": "^4.18.0",
     "motion-v": "^1.10.2",
+    "nanoid": "^5.1.6",
     "pg": "^8.17.2",
     "reflect-metadata": "^0.2.2",
     "remark-directive": "^4.0.0",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4.1.18",
     "tailwindcss-typography": "^3.1.0",
     "vue": "^3.5.27"
